<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_popup_bg"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:src="@drawable/vehicle_information_icon_touchid" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/dialog_finger_print"
        android:textColor="@color/black"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/please_verify_finger"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/dialog_finger_print_verify"
        android:textSize="15sp"
        android:textColor="@color/black" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_common_1"
        android:layout_marginTop="20dp"
        android:background="@color/black" />

    <TextView
        android:id="@+id/dialog_finger_print_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/dialog_finger_print_cancel"
        android:textColor="@color/black"
        android:textSize="17sp" />
</LinearLayout>