<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/ib_activity_message_back"
            android:layout_width="@dimen/dimen_common_50"
            android:layout_height="@dimen/dimen_common_50"
            android:layout_alignParentLeft="true"
            android:background="@color/black"
            android:src="@drawable/login_back" />

        <TextView
            android:id="@+id/tv_activity_message_title"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dimen_common_30"
            android:layout_centerInParent="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dimen_common_10"
            android:gravity="center"
            android:text="@string/message_title"
            android:textColor="@color/login_text_color"
            android:textSize="@dimen/dimen_common_text_size_18" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_common_50"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et_activity_message"
            android:layout_width="@dimen/dimen_common_200"
            android:layout_height="wrap_content"
            android:hint="@string/message_add_tag"
            android:singleLine="true" />

        <Button
            android:text="@string/message_commit_tag"
            android:id="@+id/btn_activity_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>


    <ListView
        android:id="@+id/lv_activity_message"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>