<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dimen_common_30"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dimen_common_10"
        android:gravity="center"
        android:text="@string/h_frag_lock"
        android:textColor="@color/login_text_color"
        android:textSize="@dimen/dimen_common_text_size_18" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/rll_control_key"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="96dp">

            <LinearLayout
                android:id="@+id/lnl_hornflashinglights"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_hornflashinglights"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/selector_btn_click_light_up" />

                <TextView
                    android:id="@+id/tv_hornflashinglights"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/h_control_lights"
                    android:textColor="@color/black"
                    android:textSize="@dimen/haval_control_size" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/lnl_unlock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="48dp"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_unlock"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/selector_btn_click_unlock_up" />

                <TextView
                    android:id="@+id/tv_unlock"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/h_control_open_lock"
                    android:textColor="@color/black"
                    android:textSize="@dimen/haval_control_size" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/lnl_lock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="48dp"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_lock"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/selector_btn_click_lock_up" />

                <TextView
                    android:id="@+id/tv_lock"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/h_control_close_lock"
                    android:textColor="@color/black"
                    android:textSize="@dimen/haval_control_size" />
            </LinearLayout>

        </RelativeLayout>
    </LinearLayout>

</LinearLayout>