<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_common_50">
        <ImageButton
            android:id="@+id/ib_activity_register_sms_ver_back"
            android:layout_width="@dimen/dimen_common_50"
            android:layout_height="@dimen/dimen_common_50"
            android:layout_alignParentLeft="true"
            android:background="@color/black"
            android:src="@drawable/login_back" />

        <TextView
            android:id="@+id/tv_activity_register_sms_title"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dimen_common_30"
            android:layout_centerInParent="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dimen_common_10"
            android:gravity="center"
            android:text="@string/login_register"
            android:textColor="@color/login_text_color"
            android:textSize="@dimen/dimen_common_text_size_18" />
    </RelativeLayout>


    <EditText
        android:id="@+id/et_activity_register_sms_number"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_common_50"
        android:layout_marginLeft="@dimen/dimen_common_30"
        android:layout_marginRight="@dimen/dimen_common_30"
        android:layout_marginTop="@dimen/dimen_common_10"
        android:hint="@string/m_sms_ver_hint"
        android:maxLength="6"
        android:maxLines="1"
        android:numeric="integer"
        android:phoneNumber="true"
        android:singleLine="true"
        android:textColor="#4a4a4a"
        android:textSize="@dimen/dimen_common_15" />

    <Button
        android:id="@+id/btn_register_sms_next"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_common_45"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/dimen_common_30"
        android:layout_marginRight="@dimen/dimen_common_30"
        android:layout_marginTop="@dimen/dimen_common_20"
        android:text="@string/common_next_string"
        android:textColor="@color/login_text_color"
        android:textSize="@dimen/dimen_common_14" />

    <TextView
        android:id="@+id/tv_activity_register_sms_again"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dimen_common_45"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="@dimen/dimen_common_30"
        android:layout_marginRight="@dimen/dimen_common_30"
        android:layout_marginTop="@dimen/dimen_common_20"
        android:gravity="center"
        android:text="重新发送"
        android:textColor="@color/black" />
</LinearLayout>