<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dimen_common_30"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dimen_common_10"
        android:gravity="center"
        android:text="@string/h_frag_air"
        android:textColor="@color/login_text_color"
        android:textSize="@dimen/dimen_common_text_size_18" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_common_30"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <SeekBar
                android:id="@+id/sb_runtime"
                android:layout_width="@dimen/dimen_common_200"
                android:layout_height="wrap_content"
                android:max="30"
                android:min="0" />

            <TextView
                android:id="@+id/tv_runtime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/dimen_common_text_size_14" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_common_30"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <SeekBar
                android:id="@+id/sb_temperature"
                android:layout_width="@dimen/dimen_common_200"
                android:layout_height="wrap_content"
                android:max="30"
                android:min="17" />

            <TextView
                android:id="@+id/tv_temperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/dimen_common_text_size_14" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/rll_control_air"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="96dp">

            <LinearLayout
                android:id="@+id/lnl_open_air"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="48dp"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_open_air"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_centerInParent="true"
                    android:src="@drawable/selector_btn_click_open_air_up" />

                <TextView
                    android:id="@+id/tv_open_air"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/h_control_open"
                    android:textColor="@color/black"
                    android:textSize="@dimen/haval_control_size" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/lnl_close_air"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="48dp"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_close_air"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_centerInParent="true"
                    android:src="@drawable/selector_btn_click_close_air_up" />

                <TextView
                    android:id="@+id/tv_close_air"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/h_control_close"
                    android:textColor="@color/black"
                    android:textSize="@dimen/haval_control_size" />

            </LinearLayout>

        </RelativeLayout>
    </LinearLayout>

</LinearLayout>